--- a/recruit-system/recruit-sys/src/main/resources/application-dev.yml
+++ b/recruit-system/recruit-sys/src/main/resources/application-dev.yml
@@ -1,9 +1,7 @@
 #开发环境配置
-
 server:
   # 服务端口
   port: 5000
-
 
 spring:
   # 数据源配置，请修改为你项目的实际配置
@@ -11,18 +9,17 @@ spring:
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/recruit_system?useSSL=false&serverTimezone=UTC&characterEncoding=UTF8&allowPublicKeyRetrieval=true
+#    url: jdbc:mysql://172.17.0.1:3306/recruit_system?useSSL=false&serverTimezone=UTC&characterEncoding=UTF8&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://127.0.0.1:3306/recruit_system?useSSL=false&serverTimezone=UTC&characterEncoding=UTF8&allowPublicKeyRetrieval=true
 
 
 # 开启权限拦截
 auth:
   enabled: true
 
-
 # 开启http请求日志记录
 request-log:
   enabled: true
-
 
 logging:
   level:
