--- a/recruit-system/recruit-web/.env.development
+++ b/recruit-system/recruit-web/.env.development
@@ -1,4 +1,4 @@
 ENV = 'development'
 
-VUE_APP_BASE_URL = 'http://127.0.0.1:5000/'
+VUE_APP_BASE_URL = 'http://127.0.0.1:5000'
 VUE_APP_WS_URL = 'ws:127.0.0.1:5000/ws/message/'
