--- a/recruit-system/recruit-sys/src/main/resources/application.yml
+++ b/recruit-system/recruit-sys/src/main/resources/application.yml
@@ -25,9 +25,9 @@ spring:
     #服务主机  qq邮箱为smtp.qq.com
     host: smtp.qq.com
     #发送邮件的账户
-    username: "2468520483@qq.com"
+    username: ""
     #授权码
-    password: "hyeckwoumzqrebej" # 授权码
+    password: "" # 授权码
     #服务协议
     protocol: smtp
     # 编码集
@@ -37,7 +37,6 @@ spring:
   redis:
     database: 0
     # redis服务器地址
-#    host: 172.17.0.1
     host: 127.0.0.1
     port: 6379
     # redis 密码
