--- a/recruit-system/recruit-sys/src/main/resources/ValidationMessages.properties
+++ b/recruit-system/recruit-sys/src/main/resources/ValidationMessages.properties
@@ -19,7 +19,7 @@ email=\u7535\u5B50\u90AE\u7BB1\u4E0D\u7B26\u5408\u89C4\u8303\uFF0C\u8BF7\u8F93\u
 # \u7528\u6237\u5F02\u5E38\u4FE1\u606F
 username.not-blank=\u7528\u6237\u540D\u4E0D\u53EF\u4E3A\u7A7A
 username.length=\u7528\u6237\u540D\u957F\u5EA6\u5FC5\u987B\u57282~10\u4E4B\u95F4
-nickname.length=\u7528\u6237\u540D\u957F\u5EA6\u5FC5\u987B\u57282~10\u4E4B\u95F4
+nickname.length=\u7528\u6635\u79F0\u957F\u5EA6\u5FC5\u987B\u57282~10\u4E4B\u95F4
 avatar.length=\u5934\u50CF\u94FE\u63A5\u957F\u5EA6\u4E0D\u80FD\u8D85\u8FC7500\u5B57\u7B26
 password.new.not-blank=\u5BC6\u7801\u4E0D\u53EF\u4E3A\u7A7A
 password.new.pattern=\u5BC6\u7801\u957F\u5EA6\u5FC5\u987B\u57286~22\u4F4D\u4E4B\u95F4\uFF0C\u5305\u542B\u5B57\u7B26\u3001\u6570\u5B57\u548C _
